// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu renders correctly with default props 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-default ant-dropdown-trigger"
    type="button"
  >
    <span>
      title
    </span>
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu renders correctly with disabled prop 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-default ant-dropdown-trigger"
    disabled=""
    type="button"
  >
    <span>
      title
    </span>
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu renders correctly with items and onClick handlers 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-default ant-dropdown-trigger"
    type="button"
  >
    <span>
      title
    </span>
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu renders correctly with overlayClassName 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-default ant-dropdown-trigger"
    type="button"
  >
    <span>
      title
    </span>
  </button>
</DocumentFragment>
`;
